# catalog-week5-polling

./: README.md
backend/: .env.shuttle.example  .gitignore  Cargo.toml  Shuttle.toml
backend/polling/: Cargo.toml
backend/polling/src/: main.rs
backend/src/: error.rs  main.rs  startup.rs
backend/src/auth/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: polls.rs
backend/src/websocket/: mod.rs
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: 1.pack  10.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/server-development/: 0.pack  1.pack  2.pack  3.pack  4.pack  (+7 more)
frontend/.next/server/pages/: _app.js  _document.js  _error.js  login.js  register.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/webpack/: webpack.05835a065785be0b.hot-update.js  webpack.710ff602f2319566.hot-update.js
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/polls/[pollId]/: page.tsx
frontend/app/polls/all/: page.tsx
frontend/app/polls/manage/: page.tsx
frontend/app/polls/new/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/polls/: PollCard.tsx  PollForm.tsx
frontend/lib/: api.ts  auth.ts  store.ts
frontend/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
frontend/pages/polls/: [pollId].tsx  new.tsx
frontend/styles/: globals.css
(+4 files in other folders)
