[package]
name = "polling"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6"
webauthn-rs = "0.4"
jsonwebtoken = "8.0"